--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     
     <!-- Reserved space for Google Analytics code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GGERRGEB8K"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4MV27PJL96"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GGERRGEB8K');
+  gtag('config', 'G-4MV27PJL96');
 </script>
 </head>
 <body>
