--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Get the latest AdsBridge coupon codes and enjoy exclusive discounts. Learn about AdsBridge pricing, how to use the codes, and the best ways to save money.">
     <meta name="keywords" content="AdsBridge coupon code, AdsBridge discount, AdsBridge promo, AdsBridge savings">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://softfisherman.github.io/AdsBridgeyouhuima/">
+    <link rel="canonical" href="https://softfisherman.github.io/AdsBridge-Coupon-Code/">
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; max-width: 800px; margin: auto; }
         h1, h2, h3 { color: #333; }
